Update the bug in IE

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     function stop(){ 
     alert('慧琼，我爱你');
     return false; 
-    } 
+    }
     document.oncontextmenu=stop; 
     </script>
     <body onselectstart="return false" onpaste="return false" oncopy="return false;" 
@@ -54,7 +54,7 @@
     </script>
     <style type="text/css">
 		a:link {color: #FF0000} /* 未访问的链接 */
-		a:visited {color: #FF9900} /* 已访问的链接 */
+		/*a:visited {color: #FF9900} /* 已访问的链接 */
 		a:hover {color: #FF00FF} /* 鼠标移动到链接上 */
 		a:active {color: #0000FF} /* 选定的链接 */
 	</style>
@@ -222,42 +222,15 @@
 							<h2>悄 悄 话</h2>
 							<div class="relative">
                                 <div class="scroll">
-                                    慧琼，一直在等待一个时机，我想现在是时候了，<br />
-		                            其实一直在准备这次的正式表白，但是实在没有勇气在大庭广众下进行，<br />
-		                            所以还是以最程序猿的方式，在程序猿最敏感的一天里向你说一下我的心声吧。<br />
+                                    慧琼，一直在等待一个时机，我想现在是时候了，其实一直在准备这次的正式表白，但是实在没有勇气在大庭广众下进行，所以还是以最程序猿的方式，在程序猿最敏感的一天里向你说一下我的心声吧。<br />
 		                            今天是10月24，1024确实对程序猿意味着很多，所以如果这次表白能够成功的话我会牢记这一天！<br />
-		                            不知该怎样开始，因为很想跟你有未来，还是从我的成长经历来说吧，<br />
-		                            我是一个来自单亲家庭的农家小孩，不知道你有没有察觉到，<br />
-		                            在跟你的聊天里基本没有涉及我爸，他在我三四岁的时候就去世了，<br />
-		                            所以我总是感觉我的性格里缺少了强硬的部分，或许跟这有关系吧。<br />
-		                            因为跟我妈和我姐长大，小时候对于别人说我不够man特别敏感，<br />
-		                            或许单亲家庭成长的小孩真的会有性格缺陷吧，但我不觉得生活有多苦，<br />
-		                            因为我妈给了我生活的希望，让我知道在这个世界还有我想追求的事情<br />
-		                            但是希望你能放心，我爸走得早，很小的时候我就建立了责任感，<br />
-		                            作为这个单亲家庭唯一的男子汉，我知道我对我妈的责任，<br />
-		                            尽管有时优柔寡断，但我认为我正在逐渐成长为我希望的样子。<br />
-		                            我成长的家庭并不富裕，我妈已经给了我和我姐她能给的全部，<br />
-		                            说实话，即将踏入社会很是不安，我也不知道未来我们会怎样，<br />
-		                            你平时的担忧也给了我很多警醒，以前没考虑这么多，<br />
-		                            以前我只关注成为自己想成为的样子，但是现在我更希望能成为你喜欢的样子。<br />
-		                            其实平时也有人跟我说过咱俩不合适，觉得你太小女生，我性格又太闷，<br />
-		                            但是那只是他们不了解我们，我知道我希望的未来伴侣会是什么样子，<br />
-		                            我是个凭第一感觉走的人，认定之后不会再改，
-		                            即使那是错的我也希望能从之后的错误中吸取教训，<br />
-		                            而且我相信今后的生活中我们会一起成长，<br />
-		                            也希望你能依靠自己的感觉来，不要听太多其他人的见解，即使是对我有利的，<br />
-		                            因为未来为这个决定买单的还是我们自己，与其他人无关。<br />
-		                            说这么多，主要是因为我不想谈一堆空话，我希望让你知道，<br />
-		                            我不是只说不做的男人，我希望能够给你你想要的生活。<br />
-		                            我知道你现在没有考虑那么多，也没必要考虑那么多，<br />
-		                            如果你觉得我值得信赖的话，那么请你敞开心扉给我一个机会，<br />
-		                            确实，我不太会表达感情，我知道你也是，毕竟第一次没有经验，<br />
-		                            那么就让我们一起摸索吧，用我们喜欢的方式来交流，<br />
-		                            了解对方之后我相信我们能够克服彼此的尴尬，<br />
-		                            现在的我还不敢跟你有肢体接触，不是因为我不喜欢你，<br/>
-		                            而是因为我小时候一直把自己封闭起来，其实我跟我妈我姐小学之后都没有牵手了，<br />
-		                            对于其他女孩子更是看一眼就赶紧挪开眼神，<br />
-		                            还是那句话，给我足够的时间，我会努力成为你喜欢的男朋友，<br />
+		                            不知该怎样开始，因为很想跟你有未来，还是从我的成长经历来说吧，我是一个来自单亲家庭的农家小孩，不知道你有没有察觉到，在跟你的聊天里基本没有涉及我爸，他在我三四岁的时候就去世了，所以我总是感觉我的性格里缺少了强硬的部分，或许跟这有关系吧。<br />
+		                            因为跟我妈和我姐长大，小时候对于别人说我不够man特别敏感，或许单亲家庭成长的小孩真的会有性格缺陷吧，但我不觉得生活有多苦，因为我妈给了我生活的希望，让我知道在这个世界还有我想追求的事情，希望你能放心，责任感或许是我与生俱来的，我妈对我的教育足够弥补我爸的空缺，尽管有时优柔寡断，但我认为我正在逐渐成长为我希望的样子。<br />
+		                            我成长的家庭并不富裕，我妈已经给了我和我姐她能给的全部，说实话，即将踏入社会很是不安，我也不知道未来我们会怎样，你平时的担忧也给了我很多警醒，以前没考虑这么多，以前的我只关注成为自己想成为的样子，但是现在的我更希望能成为你喜欢的样子。<br />
+		                            其实平时也有人跟我说过咱俩不合适，觉得你太小女生，我性格又太闷，但是那只是他们不了解我们，我知道我希望的未来伴侣会是什么样子，我是个凭第一感觉走的人，认定之后不会再改，即使那是错的我也希望能从之后的错误中吸取教训，而且我相信今后的生活中我们会一起成长，也希望你能依靠自己的感觉来，不要听太多其他人的见解，即使是对我有利的，因为未来为这个决定买单的还是我们自己，与其他人无关。<br />
+		                            说这么多，主要是因为我不想谈一堆空话，我希望让你知道，我不是只说不做的男人，我希望能够给你你想要的生活。<br />
+		                            我知道你现在没有考虑那么多，也没必要考虑那么多，如果你觉得我值得信赖的话，那么请你敞开心扉给我一个机会，确实，我不太会表达感情，我知道你也是，毕竟第一次没有经验，那么就让我们一起摸索吧，用我们喜欢的方式来交流，了解对方之后我相信我们能够克服彼此的尴尬。<br />
+		                            现在的我还不太敢跟你有肢体接触，不是因为我不喜欢你，一是怕你尴尬，二是因为我小时候一直把自己封闭起来，其实我跟我妈我姐小学之后都没有牵手了，对于其他女孩子更是看一眼就赶紧挪开眼神，还是那句话，给我足够的时间，我会努力成为你喜欢的那个人，<br />
 		                            所以，慧琼，你觉得呢？现在的我有机会成为你的他吗？<br />
                                 </div>
                             </div>
@@ -315,7 +288,7 @@
 
                                     <div style="min-height: 300px; padding-bottom: 50px;">
 <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="3" data-title="留言板" data-url="https://blog.csdn.net/lcx543576178/article/details/81502623"></div>
+	<div class="ds-thread" data-thread-key="3" data-title="留言板" data-url=""></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
