--- a/index.html
+++ b/index.html
@@ -222,16 +222,19 @@
 							<h2>悄 悄 话</h2>
 							<div class="relative">
                                 <div class="scroll">
+                                    <a href="./story/index.html"><strong>手机无法滚动查看的话，点击这里哦^o^</strong></a><br/>
+                                    <hr>
                                     慧琼，一直在等待一个时机，我想现在是时候了，其实一直在准备这次的正式表白，但是实在没有勇气在大庭广众下进行，所以还是以最程序猿的方式，在程序猿最敏感的一天里向你说一下我的心声吧。<br />
 		                            今天是10月24，1024确实对程序猿意味着很多，所以如果这次表白能够成功的话我会牢记这一天！<br />
 		                            不知该怎样开始，因为很想跟你有未来，还是从我的成长经历来说吧，我是一个来自单亲家庭的农家小孩，不知道你有没有察觉到，在跟你的聊天里基本没有涉及我爸，他在我三四岁的时候就去世了，所以我总是感觉我的性格里缺少了强硬的部分，或许跟这有关系吧。<br />
 		                            因为跟我妈和我姐长大，小时候对于别人说我不够man特别敏感，或许单亲家庭成长的小孩真的会有性格缺陷吧，但我不觉得生活有多苦，因为我妈给了我生活的希望，让我知道在这个世界还有我想追求的事情，希望你能放心，责任感或许是我与生俱来的，我妈对我的教育足够弥补我爸的空缺，尽管有时优柔寡断，但我认为我正在逐渐成长为我希望的样子。<br />
 		                            我成长的家庭并不富裕，我妈已经给了我和我姐她能给的全部，说实话，即将踏入社会很是不安，我也不知道未来我们会怎样，你平时的担忧也给了我很多警醒，以前没考虑这么多，以前的我只关注成为自己想成为的样子，但是现在的我更希望能成为你喜欢的样子。<br />
-		                            其实平时也有人跟我说过咱俩不合适，觉得你太小女生，我性格又太闷，但是那只是他们不了解我们，我知道我希望的未来伴侣会是什么样子，我是个凭第一感觉走的人，认定之后不会再改，即使那是错的我也希望能从之后的错误中吸取教训，而且我相信今后的生活中我们会一起成长，也希望你能依靠自己的感觉来，不要听太多其他人的见解，即使是对我有利的，因为未来为这个决定买单的还是我们自己，与其他人无关。<br />
-		                            说这么多，主要是因为我不想谈一堆空话，我希望让你知道，我不是只说不做的男人，我希望能够给你你想要的生活。<br />
+		                            其实之前也有人跟我说过咱俩不合适，上次你也说过咱们俩都太闷，但是这段时间的相处我感觉我们是有共同话题的，而且我很清楚我希望的未来伴侣会是什么样子。我是个凭第一感觉走的人，认定之后不会再改，即使那是错的我也希望能从之后的错误中吸取教训，而且我相信今后的生活中我们会一起成长，也希望你能依靠自己的感觉来，不要听太多其他人的见解，即使是对我有利的，因为未来为这个决定买单的还是我们自己，与其他人无关。<br />
+		                            说这么多，主要是因为我不想谈一堆空话，我希望让你知道我不是只说不做，我希望在今后的生活里让我们两个人都能知根知底达成默契。<br />
 		                            我知道你现在没有考虑那么多，也没必要考虑那么多，如果你觉得我值得信赖的话，那么请你敞开心扉给我一个机会，确实，我不太会表达感情，我知道你也是，毕竟第一次没有经验，那么就让我们一起摸索吧，用我们喜欢的方式来交流，了解对方之后我相信我们能够克服彼此的尴尬。<br />
-		                            现在的我还不太敢跟你有肢体接触，不是因为我不喜欢你，一是怕你尴尬，二是因为我小时候一直把自己封闭起来，其实我跟我妈我姐小学之后都没有牵手了，对于其他女孩子更是看一眼就赶紧挪开眼神，还是那句话，给我足够的时间，我会努力成为你喜欢的那个人，<br />
-		                            所以，慧琼，你觉得呢？现在的我有机会成为你的他吗？<br />
+		                            现在的我还不太敢跟你有太多肢体接触，不是因为我不喜欢你，一是怕你尴尬，二是因为我小时候一直把自己封闭起来，其实我跟我妈我姐小学之后都没有牵手了，也是不会表达感情的一种体现吧。还是那句话，给我足够的时间，我会努力成为你喜欢的那个人。<br />
+                                    对啦，关于小黄片，我知道在你内心还是反感的，我不想否认，确实看过orz，但是希望你能相信我，今后的日子我不会再看，我的眼里只会有你。<br />
+		                            所以，慧琼，我已经准备好正式开始这段感情啦，你觉得现在的我有机会成为你的他吗？<br />
                                 </div>
                             </div>
                         </div>
@@ -245,10 +248,10 @@
 								<div class="scroll">
 									<div style="color:#666666; width:100%; float:left; border-bottom: 1px solid #CCCCCC;">
 										<a href="./Tanabata.html">七夕表白^o^</a><br/>
-										<span style="float: right"> --2018/4/30</span>
+										<span style="float: right"> --2018/08/17</span>
 									</div>
 
-                                    <div style="width:100%;float: left">等待更新<br/><span style="float: right"> --2018/12/*</span></div>
+                                    <div style="width:100%;float: left">等待更新<br/><span style="float: right"> --201*/*/*</span></div>
                                     <!--<span>2015/2/13-20</span>
                                     <p>&nbsp;&nbsp;&nbsp;&nbsp;一起走来不容易</p>
                                     <p>&nbsp;&nbsp;&nbsp;&nbsp;好好去珍惜</p>
@@ -269,11 +272,13 @@
 							<h2>我 们 的 故 事</h2>
                             <div class="relative">
                                 <div class="scroll">
+                                    <!--
                                     <div style="width:100%;float: left; border-bottom: 1px solid #CCCCCC;">我们开始了^o^<br/>
                                     	<span style="float: right"> --2018/7/29</span>
                                     </div>
+                                	-->
 
-                                    <div style="width:100%;float: left">等待更新<br/><span style="float: right"> --2018/4/*</span></div>
+                                    <div style="width:100%;float: left">等待更新<br/><span style="float: right"> --201*/*/*</span></div>
                                 </div>
                             </div>
 						</div>
@@ -369,7 +374,7 @@ $(window).load(function() {
     var offsetX = $("#loveHeart").width() / 2;
     var offsetY = $("#loveHeart").height() / 2 - 55;
     var together = new Date();
-    together.setFullYear(2018, 04, 30);
+    together.setFullYear(2018, 03, 30);
     together.setHours(19);
     together.setMinutes(43);
     together.setSeconds(0);
