--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>hqcx</title>
+<title>老婆我爱你</title>
 <link rel="stylesheet" href="css/reset.css" type="text/css" media="all">
 <link type="image/x-icon" href="favicon.ico" rel="SHORTCUT ICON" />
 <link rel="stylesheet" href="css/jquery.fancybox-1.3.4.css" type="text/css" media="screen">
