fix anniversary return func

--- a/html/our_love.html
+++ b/html/our_love.html
@@ -217,7 +217,7 @@
 				<ul>
 					<li id="page_Home">
 						<img src="../assets/images/bg_images/bg_content.png" alt="" class="bg_cont">
-						<span class="back"><img src="../assets/images/bg_images/nav1.png" alt="" usemap="#back"><a href="index.html#close">返回</a></span>
+						<span class="back"><img src="../assets/images/bg_images/nav1.png" alt="" usemap="#back"><a href="our_love.html#close">返回</a></span>
 						<div class="pad">
 							<h2>悄 悄 话</h2>
 							<div class="relative">
@@ -241,7 +241,7 @@
 					</li>
 					<li id="page_About">
 						<img src="../assets/images/bg_images/bg_content.png" alt="" class="bg_cont">
-						<span class="back"><img src="../assets/images/bg_images/nav2.png" alt="" usemap="#back"><a href="index.html#close">返回</a></span>
+						<span class="back"><img src="../assets/images/bg_images/nav2.png" alt="" usemap="#back"><a href="our_love.html#close">返回</a></span>
 						<div class="pad">
 							<h2>七夕</h2>
 							<div class="relative">
@@ -267,7 +267,7 @@
 					</li>
 					<li id="page_Talk">
 						<img src="../assets/images/bg_images/bg_content.png" alt="" class="bg_cont">
-						<span class="back"><img src="../assets/images/bg_images/nav3.png" alt="" usemap="#back"><a href="index.html#close">返回</a></span>
+						<span class="back"><img src="../assets/images/bg_images/nav3.png" alt="" usemap="#back"><a href="our_love.html#close">返回</a></span>
 						<div class="pad">
 							<h2>我 们 的 故 事</h2>
                             <div class="relative">
@@ -285,7 +285,7 @@
 					</li>
 					<li id="page_Message">
 						<img src="../assets/images/bg_images/bg_content.png" alt="" class="bg_cont">
-						<span class="back"><img src="../assets/images/bg_images/nav4.png" alt="" usemap="#back"><a href="index.html#close">返回</a></span>
+						<span class="back"><img src="../assets/images/bg_images/nav4.png" alt="" usemap="#back"><a href="our_love.html#close">返回</a></span>
 						<div class="pad">
 							<h2>留言</h2>
                             <div class="relative">
@@ -315,7 +315,7 @@
 					</li>
 					<li id="page_Blog">
 						<img src="../assets/images/bg_images/bg_content.png" alt="" class="bg_cont">
-						<span class="back"><img src="../assets/images/bg_images/nav5.png" alt="" usemap="#back"><a href="index.html#close">返回</a></span>
+						<span class="back"><img src="../assets/images/bg_images/nav5.png" alt="" usemap="#back"><a href="our_love.html#close">返回</a></span>
 						<div class="pad">
 							<h2>相册</h2>
 							<div class="relative">
@@ -340,7 +340,7 @@
 					</li>
 					<li id="page_Time">
 						<img src="../assets/images/bg_images/bg_content.png" alt="" class="bg_cont">
-						<span class="back"><img src="../assets/images/bg_images/nav6.png" alt="" usemap="#back"><a href="index.html#close">返回</a></span>
+						<span class="back"><img src="../assets/images/bg_images/nav6.png" alt="" usemap="#back"><a href="our_love.html#close">返回</a></span>
 						<div class="pad">
 						<h2>沙漏</h2>
                             <div id="loveHeart" style="margin-top: 30px;font-size: 25px;">
